# pokecards-prices

./: .gitignore  CLAUDE.md  README.md  card_prices.csv  config.yaml  main.py  pyproject.toml  scraper.py
.github/: copilot-instructions.md
cards/: pokemon-black-bolt.csv  pokemon-destined-rivals.csv  pokemon-journey-together.csv  pokemon-scarlet-&-violet-energy.csv  pokemon-scarlet-&-violet.csv  pokemon-stellar-crown.csv  pokemon-temporal-forces.csv  pokemon-twilight-masquerade.csv  pokemon-white-flare.csv
output/: card_prices.csv
